A way to insert KUrlNavigator pieces in a deterministic place in the focus chain

QWidget::setTabOrder won't work correctly with KUrlNavigator, as by
itself it won't accept focus, but will contain child widgets on which
setTabOrder will be set by itself, altering the tab order that might
have been set by any parent widget

BUG: 409540
BUG: 466209
FIXED-IN: 6.11